Makes both runs in a row